--- a/index.html
+++ b/index.html
@@ -123,6 +123,116 @@
       </p>
       <a href="#" class="btn1">informacion</a>
     </main>
+
+    <!--SECTION GENERAL 1-->
+    <section class="general">
+      <div class="genera1">
+        <h2>lllor3ff</h2>
+        <p>
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Non quam
+          error eligendi cumque, nisi suscipit enim eaque dignissimos a
+          veritatis assumenda nam corrupti. Libero, ad non ratione dicta
+          repellat natus?
+        </p>
+        <a href="#" class="btn1">informacion</a>
+      </div>
+      <div class="genera2"></div>
+    </section>
+
+    <section class="general">
+      <div class="genera3"></div>
+      <div class="general">
+        <h2>lllor3ff</h2>
+        <p>
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Non quam
+          error eligendi cumque, nisi suscipit enim eaque dignissimos a
+          veritatis assumenda nam corrupti. Libero, ad non ratione dicta
+          repellat natus?
+        </p>
+        <a href="#" class="btn1">informacion</a>
+      </div>
+    </section>
+
+    <section class="blogContainer">
+      <h2>blog</h2>
+      <p>atis assumenda nam corrupti</p>
+
+      <div class="blogContent">
+        <div class="blog1">
+          <img src="images/blog1.jpg" alt="blog" />
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque,
+            aperiam quaerat sunt excepturi a, deserunt quisquam maiores dolores
+            inventore debitis eum id reprehenderit, similique molestiae expedita
+            neque aliquam asperiores suscipit.
+          </p>
+        </div>
+        <div class="blog1">
+          <img src="images/blog2.jpg.jpg" alt="blog" />
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque,
+            aperiam quaerat sunt excepturi a, deserunt quisquam maiores dolores
+            inventore debitis eum id reprehenderit, similique molestiae expedita
+            neque aliquam asperiores suscipit.
+          </p>
+        </div>
+        <div class="blog1">
+          <img src="images/blog3.jpg.jpg" alt="blog" />
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque,
+            aperiam quaerat sunt excepturi a, deserunt quisquam maiores dolores
+            inventore debitis eum id reprehenderit, similique molestiae expedita
+            neque aliquam asperiores suscipit.
+          </p>
+        </div>
+      </div>
+
+      <a href="#" class="btn1">informacion</a>
+    </section>
+
+    <!--FOOTER-->
+    <footer class="footer">
+      <div class="footerContentContainer">
+        <div class="link">
+          <h3>loem</h3>
+          <ul>
+            <li><a href="#">lorem</a></li>
+            <li><a href="#">lorem</a></li>
+            <li><a href="#">lorem</a></li>
+            <li><a href="#">lorem</a></li>
+          </ul>
+        </div>
+
+        <div class="link">
+          <h3>loem</h3>
+          <ul>
+            <li><a href="#">lorem</a></li>
+            <li><a href="#">lorem</a></li>
+            <li><a href="#">lorem</a></li>
+            <li><a href="#">lorem</a></li>
+          </ul>
+        </div>
+
+        <div class="link">
+          <h3>loem</h3>
+          <ul>
+            <li><a href="#">lorem</a></li>
+            <li><a href="#">lorem</a></li>
+            <li><a href="#">lorem</a></li>
+            <li><a href="#">lorem</a></li>
+          </ul>
+        </div>
+        <div class="link">
+          <h3>loem</h3>
+          <ul>
+            <li><a href="#">lorem</a></li>
+            <li><a href="#">lorem</a></li>
+            <li><a href="#">lorem</a></li>
+            <li><a href="#">lorem</a></li>
+          </ul>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
 
