--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!--HEADER OF PAGE-->
     <header class="header">
       <div class="menuContainer">
-        <a href="#">Logo</a>
+        <a href="#" class="logo">Logo</a>
 
         <input type="checkbox" id="menu" />
 
@@ -67,7 +67,7 @@
             </p>
           </div>
 
-          <div class="coffe2">
+          <div class="coffe1">
             <img src="images/c2.png" alt="" />
             <h3>cafe lorem</h3>
             <p>
@@ -78,7 +78,7 @@
             </p>
           </div>
 
-          <div class="coffe3">
+          <div class="coffe1">
             <img src="images/c3.png" alt="" />
             <h3>cafe lorem</h3>
             <p>
