general and service

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 
     <!--MAIN CONTENT-->
     <main class="services">
-      <div class="servicesContentcontainer">
+      <div class="servicesContentContainer">
         <h2>cafeteria servicios</h2>
 
         <div class="serviceGroup">
@@ -104,29 +104,29 @@
             <h3>servicio 1</h3>
           </div>
 
-          <div class="services2">
+          <div class="services1">
             <img src="images/i2.svg" alt="" />
             <h3>servicio 2</h3>
           </div>
 
-          <div class="services3">
+          <div class="services1">
             <img src="images/i3.svg" alt="" />
             <h3>servicio 3</h3>
           </div>
         </div>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit harum
+          magnam blanditiis delectus incidunt adipisci modi aliquid recusandae
+          neque vel nostrum laudantium a omnis assumenda voluptates, sit repellat
+          tenetur voluptas.
+        </p>
+        <a href="#" class="btn1">informacion</a>
       </div>
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit harum
-        magnam blanditiis delectus incidunt adipisci modi aliquid recusandae
-        neque vel nostrum laudantium a omnis assumenda voluptates, sit repellat
-        tenetur voluptas.
-      </p>
-      <a href="#" class="btn1">informacion</a>
     </main>
 
     <!--SECTION GENERAL 1-->
     <section class="general">
-      <div class="genera1">
+      <div class="general1">
         <h2>lllor3ff</h2>
         <p>
           Lorem ipsum dolor sit, amet consectetur adipisicing elit. Non quam
@@ -136,12 +136,12 @@
         </p>
         <a href="#" class="btn1">informacion</a>
       </div>
-      <div class="genera2"></div>
+      <div class="general2"></div>
     </section>
 
     <section class="general">
-      <div class="genera3"></div>
-      <div class="general">
+      <div class="general3"></div>
+      <div class="general1">
         <h2>lllor3ff</h2>
         <p>
           Lorem ipsum dolor sit, amet consectetur adipisicing elit. Non quam
